--- a/css/store.css
+++ b/css/store.css
@@ -116,6 +116,7 @@
     color: #141414;
     margin-bottom: 20px;
     font-size: 16px;
+    font-weight: bold;
 }
 /* ========商品列表hover======== */
 .storeline li:hover div{
