--- a/css/usercenter.css
+++ b/css/usercenter.css
@@ -12,7 +12,7 @@
     justify-content: space-between;
     align-items: flex-end;
     margin: 30px 10vw;
-    padding: 10px;
+    padding: 10px 30px;
     border-bottom: 2px solid #cacaca;
 }
 .username h3{
@@ -23,15 +23,16 @@
     text-decoration: none;
     color: #cacaca;
     font-size: 20px;
+    font-weight: bold;
     transition: .5s;
 }
 .username a:hover{
-    color: #B69452;;
+    color: #B69452;
 }
 /* ========按鈕區塊======== */
 .userbutton{
     display: block;
-    width: 80%;
+    width: 60%;
     margin: 0 auto;
 }
 .userbutton ul{
@@ -42,11 +43,13 @@
     text-decoration: none;
     color: #cacaca;
     text-align: center;
+    font-size: 20px;
+    font-weight: bold;
     transition: .5s;
 }
 .userbutton li a i{
-    font-size: 160px;
-    margin: 10px 40px 20px;
+    font-size: 120px;
+    margin: 30px 40px;
 }
 .userbutton li a:hover{
     color: #B69452;
