--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,9 @@
     background-image: url(../img/index-bg.png);
     width: 100%;
     height: 600px;
-    background-size: cover;
+    opacity:.8;
+    background-size: 120% auto;
+    background-position: center;
     font-size: 0px;
     text-align: center;
 }
@@ -19,11 +21,10 @@
     margin-top: 20px;
 }
 .indextop img{
-    width: 180px;
-    display:inline-block;
-    opacity:.2;
+    width: 12%;
+    display:inline-block;   
     vertical-align:top;
-    margin-top: 20px;
+    margin-top: 270px;
 }
 /* ========第一區塊======== */
 .indexone{
@@ -61,7 +62,7 @@
 }
 /* ======第一區塊a hover====== */
 .indexone a p{
-    background-color: #1d1d1d;
+    background-color: #424242;
     display: inline-block;
     width: 80px;
     padding:0 15px 0 5px;
@@ -123,7 +124,7 @@
 }
 /* ======第二區塊a hover====== */
 .indextwo a p{
-    background-color: #1d1d1d;
+    background-color: #424242;
     display: inline-block;
     width: 80px;
     padding:0 15px 0 5px;
