--- a/css/index.css
+++ b/css/index.css
@@ -1,39 +1,42 @@
 
 /* ========top區塊======== */
 .indextop{
-    background-image: url(../img/index-bg.png);
+    background-image: url(../img/index-bg-full.jpg);
     width: 100%;
-    height: 600px;
+    height: 500px;
     opacity:.8;
-    background-size: 120% auto;
+    background-size: 100% auto;
     background-position: center;
     font-size: 0px;
     text-align: center;
 }
 .indextop h1{
     display:inline-block;
-    padding-top: 40px;
+    padding-top: 12%;
     width: 40%;
-    font-size: 60px;
-    color:#141414;
+    font-size: 4vw;
+    color:#B69452;
     font-weight: bold;
-    text-shadow: 5px 5px 10px #cacaca59;
+    text-shadow: 1px 1px 5px #141414;
     margin-top: 20px;
 }
-.indextop img{
-    width: 12%;
-    display:inline-block;   
-    vertical-align:top;
-    margin-top: 270px;
+/* ========top區塊 RWD======== */
+@media screen and (max-width: 768px)  {
+    .indextop{
+        height: 200px;
+    }
 }
 /* ========第一區塊======== */
 .indexone{
     display:flex;
-    padding-top: 100px;
+    padding-top: 15vh;
 }
 .indexone img{
-    width: 50%;
-    margin-right: 40px;
+    display: block;
+    width: 50vw;
+    margin-right: 5vw;
+    object-fit: cover;
+    box-shadow: 10px 10px #B69452;
 }
 .indexone div{
     padding-right:10vw;
@@ -46,8 +49,9 @@
 .indexone div > p{
     font-size: 14px;
     line-height: 1.2;
-    margin-top:50px;
-    margin-bottom:60px;
+    margin-top:5em;
+    margin-bottom:10em;
+    padding:0 2vw;   
 }
 .indexone a{
     color: #cacaca;
@@ -58,9 +62,10 @@
     background-size: cover;
     text-decoration: none;
     font-size: 20px;
+    font-weight: bold;
     position: relative;
 }
-/* ======第一區塊a hover====== */
+/* ======第一區塊a hover&RWD====== */
 .indexone a p{
     background-color: #424242;
     display: inline-block;
@@ -68,34 +73,103 @@
     padding:0 15px 0 5px;
     margin-left: 15px;
     margin-top:20px;
-    transition:all .5s;
 }
 .indexone span {
     position: absolute;
     top:30px;
     left:-10px;
-    width:0px;
     border-bottom:2px solid #B69452;
-    transition:all .5s;
 }
-.indexone a:hover p{
-    transform: translateX(40px); 
+
+@media screen and (max-width: 991.98px) {
+    .indexone a p{
+        animation: indexoneauto 3s infinite;
+    }
+    @keyframes indexoneauto {
+        0%{
+            transform: translateX(0px); 
+        }20%{
+            transform: translateX(40px); 
+        }40%{
+            transform: translateX(0px); 
+        }100%{
+            transform: translateX(0px);
+        } 
+    }
+    .indexone a span{
+        animation: indexautospan 3s infinite;
+        left:-60px;
+    }
 }
-.indexone a:hover span{
-    width:40px; 
+@keyframes indexautospan {
+        0%{
+            width:0px; 
+        }20%{
+            width:90px; 
+        }40%{
+            width: 0;
+        }100%{
+            width:0px; 
+        }
 }
+@media screen and (min-width: 992px) {
+    .indexone a p{
+        transition:all .5s;
+    }
+    .indexone span {
+        width:0px;
+        transition:all .5s;
+    }
+    .indexone a:hover p{
+        transform: translateX(40px); 
+    }
+    .indexone a:hover span{
+        width:40px; 
+    }
+}
+/* ========第一區塊 靜態RWD======== */
+@media screen and (max-width: 991.98px) {
+    .indexone{
+        display:block;
+        padding-top:10vw;
+    }
+    .indexone img{
+        width: 80vw;
+        margin: 0 auto;
+    }
+    .indexone div{
+        padding: 0 10vw;
+        margin-top: 5vw;
+    }
+    .indexone div h2{
+        font-size:4vw;
+        text-align: center;
+    }
+    .indexone div > p{
+        font-size: 3vw;
+        margin:5vw;
+        border-left: 2px solid #B69452;
+    }
+    .indexone a{
+        margin-left: auto;
+    }
+}
+
 /* ========第二區塊======== */
 .indextwo{
     display:flex;
-    padding-top: 100px;
+    justify-content: flex-end;
+    padding-top: 15vh;
 }
 .indextwo img{
-    width: 50%;
-    margin-left: auto;
+    display: block;
+    width: 50vw;
     order:2;
+    box-shadow: -10px 10px #B69452;
 }
 .indextwo div{
     padding-left:10vw;
+    padding-right: 5vw;
     order:1;
 }
 .indextwo h2{
@@ -106,8 +180,9 @@
 .indextwo div > p{
     font-size: 14px;
     line-height: 1.2;
-    margin-top:50px;
-    margin-bottom:60px;
+    margin-top:5em;
+    margin-bottom:10em;
+    padding:0 2vw;  
 }
 .indextwo a{
     color: #cacaca;
@@ -118,11 +193,12 @@
     background-size: cover;
     text-decoration: none;
     font-size: 20px;
+    font-weight: bold;
     padding-left:100px;
     box-sizing: border-box;
     position: relative;
 }
-/* ======第二區塊a hover====== */
+/* ======第二區塊a hover &RWD====== */
 .indextwo a p{
     background-color: #424242;
     display: inline-block;
@@ -130,19 +206,70 @@
     padding:0 15px 0 5px;
     margin-left: 15px;
     margin-top:20px;
-    transition:all .5s;
 }
 .indextwo span {
     position: absolute;
     top:30px;
     right:-10px;
-    width: 0px;
     border-bottom:2px solid #B69452;
-    transition:all .5s;
 }
-.indextwo a:hover p{
-    transform: translateX(-40px); 
+
+@media screen and (max-width: 991.98px) {
+    .indextwo a p{
+        animation: indextwoauto 3s infinite;
+    }
+    @keyframes indextwoauto {
+        0%{
+            transform: translateX(0px); 
+        }20%{
+            transform: translateX(-40px); 
+        }40%{
+            transform: translateX(0px);
+        }100%{
+            transform: translateX(0px); 
+        }
+    }
+    .indextwo span {
+        animation: indexautospan 3s infinite;
+        right:-60px;
+    }
 }
-.indextwo a:hover span{
-    width:40px; 
+@media screen and (min-width: 992px) {
+    .indextwo a p{
+        transition:all .5s;
+    }
+    .indextwo span {
+        width: 0px;
+        transition:all .5s;
+    }
+    .indextwo a:hover p{
+        transform: translateX(-40px); 
+    }
+    .indextwo a:hover span{
+        width:40px;
+    }
+}
+/* ========第二區塊 靜態RWD======== */
+@media screen and (max-width: 991.98px)  {
+    .indextwo{
+        display:block;
+        padding-top:10vw;
+    }
+    .indextwo img{
+        width: 80vw;
+        margin:0 auto;
+    }
+    .indextwo div{
+        padding: 0 10vw;
+        margin-top: 5vw;
+    }
+    .indextwo div h2{
+        font-size:4vw;
+        text-align: center;
+    }
+    .indextwo div > p{
+        font-size: 3vw;
+        margin:5vw;
+        border-left: 2px solid #B69452;
+    }
 }
