--- a/css/about.css
+++ b/css/about.css
@@ -3,66 +3,90 @@
 .abouttop{
     background-image: url(../img/about-bg.png);
     width: 100%;
-    height: 600px;
-    background-size: cover;
+    height: 500px;
+    background-size:cover;
+    background-position: center;
     font-size: 0px;
     text-align: center;
+    margin-bottom: 15vh;
 }
 .abouttop h1{
     display:inline-block;
     width: 40%;
-    font-size: 60px;
+    font-size: 4vw;
     color:#141414;
     font-weight: bold;
     text-shadow: 5px 5px 10px #cacaca59;
+    padding-top: 200px;
 }
 .abouttop img{
-    width: 140px;
-    display:block;
+    display:inline-block;
+    width: 10%;
     margin:0 auto;
-    padding-top: 40px;
+    padding-top: 100px;
 }
-.abouttop div{
-    width: 110px;
-    font-size: 24px;
+.abouttop p{
+    font-size: 2vw;
     color:#141414;
-    margin: 80px auto 0 auto;
-    font-weight: bold;
-    border-bottom: 2px solid #141414;
+    margin: 20px auto 0 auto;
+    text-decoration:underline
 }
+
+/* ========top區塊 RWD======== */
+@media screen and (max-width: 768px)  {
+    .abouttop{
+        height: 200px;
+    }
+    .abouttop h1{
+        padding-top: 80px;
+    }
+    .abouttop img{
+        display:inline-block;
+        width: 10%;
+        margin:0 auto;
+        padding-top: 60px;
+    }
+}
+
 /* ========第一三區塊======== */
 .aboutone{
-    margin-top: 100px;
     display: flex;
     position: relative;
+    margin-bottom: calc(15vw + 15vh);
 }
-.aboutone div:first-child{
-    width: 750px;
-    height: 400px;
+.aboutone > img{
+    width: 60vw;
+    height: 30vw;
+    object-fit: cover;
+    object-position: 0 22%;
+    margin-left:auto;
+}
+.aboutone div{
+    width: 65vw;
+    height: 30vw;
     border:2px solid #B69452;
     position: absolute;
-    top:250px;
-    left:10vw;
+    top:15vw;
+    left:15vw;
+    margin-left: auto;
 }
 .aboutone h2{
-    font-size: 40px;
-    margin:120px 0 0 50px;
+    display: block;
+    width: 25vw;
+    height: 8vw;
+    font-size: 32px;
+    text-align: center;
+    padding: 6vw 0 1vw 0;
+    line-height: 4vw;
 }
 .aboutone div >p{
     font-size: 16px;
-    margin: 120px 40px 0 40px;
-}
-.aboutonepic{
-    background-image: url(../img/aboutone.jpg);
-    background-size: 650px auto;
-    background-position: 0 -183px;
-    width: 650px;
-    height: 500px;
-    margin-left:auto;
+    margin: 2vw 5vw;
 }
 .aboutone a{
     color: #cacaca;
     background-image: url(../img/b_btn.png);
+    background-color: #424242;
     display:block;
     width: 220px;
     height: 60px;
@@ -70,67 +94,132 @@
     text-decoration: none;
     font-size: 20px;
     position:absolute;
-    top:580px;
-    left:72vw;
-    position: relative;
+    top:37.5vw;
+    left:70vw;
 }
-/* ======第一三區塊a hover====== */
+/* ========第一三區塊 RWD======== */
+@media screen and (min-width: 1600px) {
+    .aboutone a{
+        left: 60vw;
+    }
+}
+@media screen and (max-width: 991.98px) {
+    .aboutone{
+        margin-bottom: calc(12vw + 15vh + 60px);
+    }
+    .aboutone h2{
+        font-size: 3.8vw;
+    }
+    .aboutone div >p{
+        font-size: 2vw;
+    }
+    .aboutone a{
+        top:42vw;
+        left: 14vw;
+        font-size: min(4vw, 20px);
+    }
+}
+/* ======第一三區塊a hover &RWD====== */
 .aboutone a p{
-    background-color: #1d1d1d;
+    background-color: #424242;
     display: inline-block;
-    width: 80px;
+    width: 90px;
     padding:0 15px 0 5px;
     margin-left: 15px;
     margin-top:20px;
-    transition:all .5s;
+    text-align: center;
 }
 .aboutone span {
     position: absolute;
     top:30px;
     left:-10px;
-    width:0px;
     border-bottom:2px solid #B69452;
-    transition:all .5s;
 }
-.aboutone a:hover p{
-    transform: translateX(40px); 
+@media screen and (max-width: 991.98px) {
+    .aboutone a p{
+        animation: aboutoneauto 3s infinite;
+        font-size: min(4vw, 20px);
+    }
+    @keyframes aboutoneauto {
+        0%{
+            transform: translateX(0px); 
+        }20%{
+            transform: translateX(40px); 
+        }40%{
+            transform: translateX(0px); 
+        }100%{
+            transform: translateX(0px);
+        }
+    }
+    .aboutone a span{
+        animation: aboutautospan 3s infinite;
+        left:0;
+    } 
 }
-.aboutone a:hover span{
-    width:40px; 
+@keyframes aboutautospan {
+    0%{
+        width:0px; 
+    }20%{
+        width:90px; 
+    }40%{
+        width: 0;
+    }100%{
+        width:0px; 
+    }
+}
+@media screen and (min-width: 992px) {
+    .aboutone a p{
+        transition:all .5s;
+    }
+    .aboutone span {
+        width:0px;
+        transition:all .5s;
+    }
+    .aboutone a:hover p{
+        transform: translateX(40px); 
+    }
+    .aboutone a:hover span{
+        width:40px; 
+    }
 }
 /* ========第二區塊======== */
 .abouttwo{
-    margin-top: 200px;
     display: flex;
     position: relative;
-    margin-bottom: 200px;
+    margin-bottom: calc(15vw + 15vh);
 }
-.abouttwopic{
-    background-image: url(../img/abouttwo.jpg);
-    background-size: auto 500px;
-    background-position: -45px 0;
-    width: 650px;
-    height: 500px;
+.abouttwo > img{
+    width: 60vw;
+    height: 30vw;
+    object-fit: cover;
+    object-position: 14% 0;
 }
-.abouttwo div:nth-child(2){
-    width: 800px;
-    height: 400px;
+.abouttwo div{
+    width: 65vw;
+    height: 30vw;
     border:2px solid #B69452;
     position: absolute;
-    top:250px;
-    left:28vw;
+    top:15vw;
+    right:15vw;
 }
 .abouttwo h2{
-    font-size: 40px;
-    margin:120px 0 0 320px;
+    display: block;
+    width: 25vw;
+    height: 8vw;
+    font-size: 32px;
+    text-align: center;
+    margin-left: 40vw;
+    padding: 6vw 0 1vw 0;
+    line-height: 4vw;
 }
 .abouttwo div >p{
     font-size: 16px;
-    margin: 120px 40px 0 40px;
+    margin: 2vw 5vw;
 }
 .abouttwo a{
     color: #cacaca;
     background-image: url(../img/d_btn.png);
+    background-color: #424242;
     display:block;
     width: 230px;
     height: 60px;
@@ -140,42 +229,83 @@
     padding-left:100px;
     box-sizing: border-box;
     position: absolute;
-    top:580px;
-    left:-45vw;
-    position: relative;
+    top:37.5vw;
+    right:70vw;
 }
-/* ======第二區塊a hover====== */
+/* ========第二區塊 RWD======== */
+@media screen and (min-width: 1600px) {
+    .abouttwo a{
+        right: 60vw;
+    }
+}
+@media screen and (max-width: 991.98px) {
+    .abouttwo{
+        margin-bottom: calc(12vw + 15vh + 60px);
+    }
+    .abouttwo h2{
+        font-size: 3.8vw;
+    }
+    .abouttwo div >p{
+        font-size: 2vw;
+    }
+    .abouttwo a{
+        top:42vw;
+        right:14vw;
+        font-size: min(4vw, 20px);
+    }
+}
+/* ======第二區塊a hover&RWD====== */
 .abouttwo a p{
-    background-color: #1d1d1d;
+    background-color: #424242;
     display: inline-block;
-    width: 80px;
-    padding:0 15px 0 5px;
-    margin-left: 15px;
+    width: 90px;
+    padding:0 5px 0 15px;
     margin-top:20px;
-    transition:all .5s;
+    text-align: center;
 }
 .abouttwo span {
     position: absolute;
     top:30px;
     right:-10px;
-    width: 0px;
     border-bottom:2px solid #B69452;
-    transition:all .5s;
 }
-.abouttwo a:hover p{
-    transform: translateX(-40px); 
+@media screen and (max-width: 991.98px) {
+    .abouttwo a p{
+        animation: abouttwoauto 3s infinite;
+        font-size: min(4vw, 20px);
+    }
+    @keyframes abouttwoauto {
+        0%{
+            transform: translateX(0px); 
+        }20%{
+            transform: translateX(-40px); 
+        }40%{
+            transform: translateX(0px); 
+        }100%{
+            transform: translateX(0px);
+        }
+    }
+    .abouttwo a span{
+        animation: aboutautospan 3s infinite;
+        right:0;
+    } 
 }
-.abouttwo a:hover span{
-    width:40px; 
+@media screen and (min-width: 992px) {
+    .abouttwo a p{
+        transition:all .5s;
+    }
+    .abouttwo span {
+        width: 0px;
+        transition:all .5s;
+    }
+    .abouttwo a:hover p{
+        transform: translateX(-40px); 
+    }
+    .abouttwo a:hover span{
+        width:40px; 
+    }
 }
 /* =======第三區塊pic======= */
-.aboutthreepic{
-    background-image: url(../img/aboutthree.jpg);
-    background-size: 1249px auto;
-    background-position: -448px 0px;
-    width: 650px;
-    height: 500px;
-    margin-left:auto;
-    display: block;
-    margin-bottom: 100px;
+.aboutone > img.aboutthree{
+    object-position: 100% 0;
 }
