--- a/css/index.css
+++ b/css/index.css
@@ -9,27 +9,30 @@
     background-position: center;
     font-size: 0px;
     text-align: center;
+    margin-bottom: 15vh;
 }
 .indextop h1{
     display:inline-block;
-    padding-top: 12%;
+    padding-top: 200px;
     width: 40%;
     font-size: 4vw;
     color:#B69452;
     font-weight: bold;
-    text-shadow: 1px 1px 5px #141414;
-    margin-top: 20px;
+    text-shadow: 1px 1px 10px #141414;
 }
 /* ========top區塊 RWD======== */
 @media screen and (max-width: 768px)  {
     .indextop{
         height: 200px;
     }
+    .indextop h1{
+        padding-top: 100px;
+    }
 }
 /* ========第一區塊======== */
 .indexone{
     display:flex;
-    padding-top: 15vh;
+    padding-bottom: 15vh;
 }
 .indexone img{
     display: block;
@@ -43,7 +46,7 @@
 }
 .indexone div h2{
     font-size: 32px;
-    margin-top:20px;
+    margin-top:40px;
     font-weight: bold;
 }
 .indexone div > p{
@@ -51,7 +54,7 @@
     line-height: 1.2;
     margin-top:5em;
     margin-bottom:10em;
-    padding:0 2vw;   
+    padding:0 2vw;
 }
 .indexone a{
     color: #cacaca;
@@ -69,10 +72,11 @@
 .indexone a p{
     background-color: #424242;
     display: inline-block;
-    width: 80px;
+    width: 90px;
     padding:0 15px 0 5px;
     margin-left: 15px;
     margin-top:20px;
+    text-align: center;
 }
 .indexone span {
     position: absolute;
@@ -84,13 +88,16 @@
 @media screen and (max-width: 991.98px) {
     .indexone a p{
         animation: indexoneauto 3s infinite;
+        font-size: min(4vw, 20px);
     }
     @keyframes indexoneauto {
         0%{
             transform: translateX(0px); 
         }20%{
-            transform: translateX(40px); 
+            transform: translateX(0px);
         }40%{
+            transform: translateX(40px); 
+        }60%{
             transform: translateX(0px); 
         }100%{
             transform: translateX(0px);
@@ -98,19 +105,44 @@
     }
     .indexone a span{
         animation: indexautospan 3s infinite;
-        left:-60px;
+        left:calc(220px - 75vw);
+    }
+    .indexone a span::before{
+        content: "";
+        display: block;
+        height: 0;
+        border-right: 2px solid #B69452;
+        position: absolute;
+        left:0;
+        top:calc(30px - 60px - 5vw);
+        animation: indexautospanbefore 3s infinite;
     }
 }
 @keyframes indexautospan {
         0%{
-            width:0px; 
+            width:0;
+        }10%{
+            width:0; 
         }20%{
-            width:90px; 
-        }40%{
-            width: 0;
+            width:calc(75vw - 220px); 
+        }30%{
+            width:calc(75vw - 180px); 
+        }60%{
+            width:0;
         }100%{
-            width:0px; 
+            width:0; 
         }
+}
+@keyframes indexautospanbefore{
+    0%{
+        height:0;
+    }10%{
+        height:calc(30px + 5vw); 
+    }60%{
+        height:calc(30px + 5vw); 
+    }100%{ 
+        height:0;
+    } 
 }
 @media screen and (min-width: 992px) {
     .indexone a p{
@@ -159,7 +191,7 @@
 .indextwo{
     display:flex;
     justify-content: flex-end;
-    padding-top: 15vh;
+    padding-bottom: 15vh;
 }
 .indextwo img{
     display: block;
@@ -174,7 +206,7 @@
 }
 .indextwo h2{
     font-size: 32px;
-    margin-top:20px;
+    margin-top:40px;
     font-weight: bold;
 }
 .indextwo div > p{
@@ -202,10 +234,10 @@
 .indextwo a p{
     background-color: #424242;
     display: inline-block;
-    width: 80px;
-    padding:0 15px 0 5px;
-    margin-left: 15px;
+    width: 90px;
+    padding:0 5px 0 15px;
     margin-top:20px;
+    text-align: center;
 }
 .indextwo span {
     position: absolute;
@@ -214,24 +246,37 @@
     border-bottom:2px solid #B69452;
 }
 
-@media screen and (max-width: 991.98px) {
+@media screen and (max-width: 991.98px) {   
     .indextwo a p{
         animation: indextwoauto 3s infinite;
+        font-size: min(4vw, 20px);
     }
     @keyframes indextwoauto {
         0%{
-            transform: translateX(0px); 
+            transform: translateX(0); 
         }20%{
-            transform: translateX(-40px); 
+            transform: translateX(0); 
         }40%{
-            transform: translateX(0px);
+            transform: translateX(-40px);
+        }60%{
+            transform: translateX(0);
         }100%{
-            transform: translateX(0px); 
+            transform: translateX(0); 
         }
     }
     .indextwo span {
         animation: indexautospan 3s infinite;
-        right:-60px;
+        right:calc(230px - 75vw);
+    }
+    .indextwo a span::before{
+        content:"";
+        display: block;
+        height:0;
+        border-left: 2px solid #B69452;
+        position:absolute;
+        right:0;
+        top:calc(30px - 60px - 5vw);
+        animation: indexautospanbefore 3s infinite;
     }
 }
 @media screen and (min-width: 992px) {
@@ -270,6 +315,6 @@
     .indextwo div > p{
         font-size: 3vw;
         margin:5vw;
-        border-left: 2px solid #B69452;
+        border-right: 2px solid #B69452;
     }
 }
